# cli-starter

./: README.md  pyproject.toml
clistarter/: __init__.py  cli.py  const.py  utils.py
