[tool.poetry]
name = "clistarter"
version = "0.1.0"
description = "starter repo for CLI tools"
authors = ["Aaron DeVera <aaronsdevera@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = {extras = ["socks"], version = "^2.31.0"}
keyring = "^25.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clistarter = "clistarter.cli:cli"